--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -5,20 +5,28 @@
 /* Style global de la navbar */
 .navbar {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  justify-content: flex-end; /* Aligne les éléments à droite */
+  align-items: center; /* Aligne les éléments verticalement */
   padding: 10px 20px;
   background-color: #3498db;
   color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   height: 60px;
+  position: relative;
+  z-index: 1000;
+}
+
+/* Conteneur des icônes */
+.navbar-right {
+  display: flex; /* Aligne les icônes horizontalement */
+  align-items: center; /* Centre les icônes verticalement */
+  gap: 20px; /* Ajoute un espace entre les icônes */
 }
 
 /* Icônes de la navbar */
 .navbar-icon {
   font-size: 1.5rem;
   cursor: pointer;
-  margin-left: 20px;
   transition: color 0.3s ease;
 }
 
@@ -29,8 +37,8 @@
 /* Badge de notification */
 .notification-badge {
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: -5px; /* Ajuste la position verticale */
+  right: -5px; /* Ajuste la position horizontale */
   background-color: #e74c3c;
   color: #fff;
   font-size: 0.8rem;
@@ -39,11 +47,16 @@
   padding: 2px 6px;
 }
 
+/* Conteneur des notifications */
+.navbar-notification {
+  position: relative; /* Définit un contexte pour positionner le badge */
+}
+
 /* Menu des notifications */
 .notification-menu {
   position: absolute;
-  top: 60px;
-  right: 20px;
+  top: 50px;
+  right: 0;
   background-color: #fff;
   color: #333;
   border: 1px solid #ddd;
@@ -57,6 +70,23 @@
   list-style: none;
   margin: 0;
   padding: 10px;
+}
+
+.notification-item {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.notification-item:last-child {
+  border-bottom: none;
+}
+
+.notification-item:hover {
+  background-color: #f9f9f9;
+  color: #3498db;
 }
 
 .notification-menu li {
@@ -76,9 +106,9 @@
 /* Menu utilisateur */
 .user-menu {
   position: absolute;
-  top: 60px;
-  right: 20px;
-  background-color: #fff;
+  top: 50px;
+  right: 0;
+  background-color: #0f0d0d;
   color: #333;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -100,5 +130,5 @@
 }
 
 .user-menu button:hover {
-  background-color: #f9f9f9;
+  background-color: #7b83d1;
 }
