--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -132,7 +132,7 @@
   border-radius: 20px;
   font-size: 0.75rem; /* Taille de police réduite */
   font-weight: bold;
-  color: #fff;
+  color: #6bcaf7;
   text-transform: capitalize;
 }
 
